@@ -4,7 +4,6 @@ MANIFEST
 t/000_basic.t
 t/950_pod.t
 t/960_pod_coverage.t
-t/990_kwalitee.t
 Changes
 README
 META.yml                                 Module meta-data (added by MakeMaker)
