@@ -1,3 +1,7 @@
+Version 2010011301 Wed Jan 13 21:50:30 CET 2010
++ New authors
++ Kwalitee test author only
+
 Version 2010010401 Mon Jan  4 13:18:42 CET 2010
 + New authors
 
